--- a/prelim/content/2-background-1-rt.tex
+++ b/prelim/content/2-background-1-rt.tex
@@ -249,7 +249,7 @@ Additionally, discrete ordinates methods can sometimes produce non-physical resu
 
 For all of these reasons, deterministic methods are rarely suitable by themselves for use in the analysis of complex nuclear systems.
 
-However, deterministic transport has been proven to be very useful when used in conjunction with Monte Carlo simulations in so-called "hybrid methods."
+However, deterministic transport has been proven to be very useful when used in conjunction with Monte Carlo simulations in so-called ``hybrid methods.''
 For example, in deep penetration problems (with which Monte Carlo methods have considerable difficulty,) deterministic methods can be used to solve the forward and adjoint transport equations and generate weight window parameters for use in Monte Carlo radiation transport (i.e. the FW-CADIS method \cite{fwcadis} in the ADVANTG \cite{advantg} software package.)
 In these cases, it is not necessary that the deterministic solver produce a perfectly accurate solution because the end results are still derived from the Monte Carlo simulation; an approximate solution is sufficient.
 
