--- a/prelim/content/2-background-2-pert.tex
+++ b/prelim/content/2-background-2-pert.tex
@@ -47,6 +47,10 @@ Combining Equations \ref{eq:bg:pt:green29} and \ref{eq:bg:pt:green29_perturbed},
   H\delta\psi & = -\delta H\psi.
 \end{split}\end{equation}
 
+It is only appropriate to discard the second-order term $\delta H\delta\psi$ if the perturbation is ``small.''
+If a large perturbation is made, or if many small perturbations are made at once, then Equation \ref{eq:bg:pt:green44a} is no longer valid.
+What it means for a perturbation to be ``small'' will be discussed in Section \ref{sec:bg:opt}.
+
 If a detector has a response function $q^+$, then the detector response $R$ to an external source $q$ in the unperturbed system is given by
 \begin{equation}\label{eq:bg:pt:green168}
   R = \left<\psi,q^+\right>
