--- a/prelim/content/2-background-1-rt.tex
+++ b/prelim/content/2-background-1-rt.tex
@@ -261,7 +261,7 @@ In these cases, it is not necessary that the deterministic solver produce a perf
 Denovo \cite{denovo} is a powerful block-parallel S\textsubscript{N} code developed at Oak Ridge National Laboratory.
 It uses the multigroup energy and anisotropic P\textsubscript{n} approximations, and it can solve both the forward and adjoint transport equations.
 It has several spatial discretization algorithms and angle quadrature sets and has numerous additional options and features that allow users to control problem parameters.
-Denovo has been used to solve problems with over a billion voxels.
+Denovo has been used to solve problems with over one billion voxels.
 
 %===============================================================================
 \subsection{Monte Carlo Method}
